<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/explanation"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/task_input_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskName_explain"
        android:layout_width="58dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/task_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/taskName"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/taskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/task_nameinput_prompt"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/explanation" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.24" />

    <EditText
        android:id="@+id/taskExplain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/task_explaninput_prompt"
        android:inputType="textMultiLine|textPersonName"
        android:maxLength="100"
        android:maxLines="7"
        android:minLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/taskName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/task_explan"
        app:layout_constraintBaseline_toBaselineOf="@+id/taskExplain"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/severity_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/task_severity"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioGroup_severity"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_severity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="true"
        android:baselineAlignedChildIndex="0"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/taskExplain">

        <RadioButton
            android:id="@+id/severityHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/severity_high"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="111dp"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="91dp" />

        <RadioButton
            android:id="@+id/severityMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/severity_mid"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="111dp"
            tools:layout_editor_absoluteX="293dp"
            tools:layout_editor_absoluteY="91dp" />

        <RadioButton
            android:id="@+id/severityLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/severity_low"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="111dp"
            tools:layout_editor_absoluteX="293dp"
            tools:layout_editor_absoluteY="91dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/achieve_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/task_achievement_degrees"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioGroup_achieve"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_achieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="true"
        android:baselineAlignedChildIndex="0"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_severity">

        <RadioButton
            android:id="@+id/achieve_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/achieve_yes" />

        <RadioButton
            android:id="@+id/achieve_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/achieve_no" />
    </RadioGroup>

    <TextView
        android:id="@+id/dateSelect_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/task_enddate"
        app:layout_constraintBaseline_toBaselineOf="@+id/dateSelect"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dateSelect"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_achieve" />

    <EditText
        android:id="@+id/timeSelect"
        android:layout_width="65dp"
        android:layout_height="42dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="time"
        app:layout_constraintBaseline_toBaselineOf="@+id/dateSelect"
        app:layout_constraintStart_toEndOf="@+id/dateSelect" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/dateSelect">

        <EditText
            android:id="@+id/notifyTime"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:maxLength="3"
            android:text="10" />

        <Spinner
            android:id="@+id/notify_kind2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/dropdown_border" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/notify_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true" />

    </LinearLayout>

    <TextView
        android:id="@+id/notify_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="通知"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateSelect_explain" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/commitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:text="@string/task_commit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>